fix(run): get minimal web app running

--- a/config/base.ini
+++ b/config/base.ini
@@ -19,7 +19,7 @@ ident = %(def_agency)s
 
 
 [app:main]
-use = egg:ott.otp_client
+use = egg:ott.cache
 
 pyramid.reload_templates = false
 pyramid.debug_authorization = false
